small addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Welcome to coursera test!</title>
 </head>
 <body>
-<h1>welcome to coursera test</h1>
+<h1>welcome to coursera test - this is a great course!</h1>
 </body>
 </html>
